refactor: split LocalMapping::Run into LocalMapping/Run file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ src/LocalMapping.cc
 src/LocalMapping/CreateNewMapPoints.cc
 src/LocalMapping/KeyFrameCulling.cc
 src/LocalMapping/InitializeIMU.cc
+src/LocalMapping/Run.cc
 src/LoopClosing.cc
 src/ORBextractor.cc
 src/ORBmatcher.cc
