refactor: Rewrite localmapping (#9)
* add LocalMapping::DistanceOfKeyFrames and use it

* fmt(change limit of char)

* refactor: use range based for

* refactor: use range based for

* refactor: SearchInNeighborsから近傍探索をGetNeighborsとして切り出し

* refactor: use null check with &&

* refactor: use range based for

* refactor: use range based for

* feat: add comment

* feat: add doc

* fix: fix commennt

* RetrieveAllKFinTemporalOrderをLocalMapping::InitializeIMUから切り出した

* add comment

* refactor: Split the LocalMapping into multiple files

* feat: add comment for LocalMapping::ScaleRefinement(and remove unused variable

* refactor: remove unused variables

* featu: add comment and fmt

* refactor: Separate LocalMapping::Run into Run and RunOnce[wip]

* refactor: remove unused variable

* refactor: use early return

* refactor: split LocalMapping::Run into LocalMapping/Run file

* move the variables

* move variables and add comment

* add comment(and fmt

* refactor: RunOnce内のLocalBA周りを切り分けた

* LocalMapping::LocalBAをメンバ関数ではなく関数に

* refactor: SearchInNeighborsとGetNeighborsをファイルに切り分けて、GetNeighborsをただの関数に変更

* refactor: GetNeighborsの処理を3つに分けた

* 関数名を変更

* refactor: remove unused include

* refactor: remove unused function

* プロトタイプ宣言でローカルな関数の記述をパブリックなものの下に持っていった

* LocalMapping::CreateNewMapPointsにコメント追加

* refactor: remove unused variables

* refactor: 計測コードを削除

* 閾値設定を３項演算にしてconst値に

* コメント追加

* コメント追加

* Add comment for System::GetTimeFromIMUInit

* clang formatの設定を元に戻した

* fmt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,11 @@ add_library(${PROJECT_NAME} SHARED
     System.cc
     Tracking.cc
     LocalMapping.cc
+    LocalMapping/CreateNewMapPoints.cc
+    LocalMapping/KeyFrameCulling.cc
+    LocalMapping/InitializeIMU.cc
+    LocalMapping/SearchInNeighbors.cc
+    LocalMapping/Run.cc
     LoopClosing.cc
     ORBextractor.cc
     ORBmatcher.cc
